# OmniRoute

./: .aiexclude  .audit-branches.py  .containerignore  .dockerignore  .editorconfig  .env.example  .env.example.observability  .envrc  .gitignore  .gitleaks-push.sh  .gitleaks.toml  .npmrc  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .size-limit.json  .tool-versions  .trufflehog.yml  .trufflehogignore  .typos.toml  .woodpecker.yml  .zizmor.yml  00_START_HERE.md  ADR.md  AGENTS.md  ALIASES.md  ARCHITECTURE.md  BOUNDARY.md  BOUNDARY_OWNERS.md  BUILD_STATUS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  DOMAIN_ROLES.md  Dockerfile  (+64 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: gateway.rs  lib.rs  main.rs  menu.rs  tray.rs
backend-rust/crates/omniroute-pipeline/: Cargo.toml
backend-rust/crates/omniroute-pipeline/src/: error.rs  lib.rs  sse.rs  stream.rs  usage.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: kbridge_client.rs  lib.rs  log_stream.rs  process.rs  shutdown.rs
crates/gateway/tests/: ipc.rs  kbridge_client.rs  process.rs
crates/omni-server/: Cargo.toml
crates/omni-server/src/: main.rs  state.rs
crates/omni-server/src/executors/: mod.rs  openai.rs
crates/omni-server/src/handlers/: openai.rs  v1_models.rs
crates/omni-server/src/providers/: mod.rs
crates/omniroute-core/: Cargo.toml
crates/omniroute-core/src/: credentials.rs  error.rs  lib.rs  model.rs  provider.rs  types.rs  usage.rs
crates/omniroute-ffi/: Cargo.toml
crates/omniroute-ffi/crates/bifrost-bridge/: Cargo.toml  bridge.go  build.rs  go.mod  go.sum  libbifrost_bridge.h
crates/omniroute-ffi/crates/combo-scorer/: Cargo.toml
crates/omniroute-ffi/crates/combo-scorer-napi/: Cargo.toml
crates/omniroute-ffi/crates/signature-cache/: Cargo.toml
crates/omniroute-ffi/crates/sse-chunking/: Cargo.toml
crates/omniroute-provider/: Cargo.toml
crates/omniroute-provider/src/: anthropic.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  registry.rs
crates/omniroute-runtime/: Cargo.toml
crates/omniroute-runtime/src/: chat.rs  health.rs  lib.rs  metrics.rs  otel.rs  retry.rs  server.rs  sse.rs
crates/omniroute-runtime/tests/: e2e_uds.rs
crates/sharecli-core/: Cargo.toml
crates/sharecli-core/src/: lib.rs
crates/sharecli-fuse/: Cargo.toml
crates/sharecli-fuse/src/: lib.rs
crates/sharecli-tray-linux/: Cargo.toml  README.md
crates/sharecli-tray-linux/src/: ipc.rs  main.rs
examples/oidc_consumer/: Cargo.toml  README.md  test_rsa.pem  test_rsa.pub
examples/oidc_consumer/src/: main.rs
omniroute-rt/: Cargo.toml
omniroute-rt/src/: lib.rs  metrics.rs  openai.rs  sse.rs
omniroute-rust/: Cargo.toml  Dockerfile  README.md  justfile
omniroute-rust/.cargo/: config.toml
omniroute-rust/.github/workflows/: ci.yml
omniroute-rust/crates/omni-a2a/: Cargo.toml
omniroute-rust/crates/omni-a2a/src/: lib.rs
omniroute-rust/crates/omni-cli/: Cargo.toml.tmp
omniroute-rust/crates/omni-cli/src/: http.rs  lib.rs  main.rs  output.rs
omniroute-rust/crates/omni-compression/: Cargo.toml  Cargo.toml.tmp
omniroute-rust/crates/omni-compression/src/: aggressive.rs  lib.rs  pipeline.rs
omniroute-rust/crates/omni-core/: Cargo.toml
omniroute-rust/crates/omni-core/src/: config.rs  dispatcher.rs  error.rs  executor.rs  ids.rs  lib.rs  model.rs  observability.rs  provider.rs  registry.rs  response.rs  sqlite_storage.rs  storage.rs  streaming.rs
omniroute-rust/crates/omni-core/tests/: smoke.rs
omniroute-rust/crates/omni-crypto/: Cargo.toml
omniroute-rust/crates/omni-crypto/src/: lib.rs  signing.rs  tokens.rs
omniroute-rust/crates/omni-mcp/: Cargo.toml  Cargo.toml.tmp
omniroute-rust/crates/omni-mcp/src/: lib.rs
omniroute-rust/crates/omni-protocol/: Cargo.toml
omniroute-rust/crates/omni-protocol/src/: lib.rs
omniroute-rust/crates/omni-router/: Cargo.toml  Cargo.toml.tmp
omniroute-rust/crates/omni-router/src/: breaker.rs  lib.rs  lib.rs.bak  router.rs  strategy.rs
omniroute-rust/crates/omni-sdk/src/: chat.rs  embeddings.rs  lib.rs  models.rs
omniroute-rust/crates/omni-server/: Cargo.toml.tmp
omniroute-rust/crates/omni-server/src/: auth.rs  dispatcher.rs  lib.rs
omniroute-rust/crates/omni-storage/: Cargo.toml.tmp
omniroute-rust/crates/omni-storage/src/: lib.rs  migrations.rs  (+3 more)
omniroute-rust/crates/omni-telemetry/: Cargo.toml
omniroute-rust/crates/omni-translator/: Cargo.toml
pheno-cli-base/: Cargo.toml
pheno-cli-base/src/: lib.rs
pheno-cli-base/tests/: cli_test.rs
pheno-config/: Cargo.toml  README.md  SECURITY.md  SSOT.md
pheno-config/examples/: hot_reload.config.toml  hot_reload.rs
pheno-config/src/: hot_reload.rs  lib.rs  secrets.rs
pheno-config/tests/: hot_reload_integration_test.rs  lifecycle_test.rs
pheno-errors/: Cargo.toml  README.md  SECURITY.md  SSOT.md
pheno-errors/.config/: nextest.toml
pheno-errors/.github/workflows/: ci.yml
pheno-errors/src/: lib.rs  rfc7807.rs
pheno-otel/: Cargo.toml  Justfile  SSOT.md
pheno-otel/.config/: nextest.toml
pheno-otel/.github/workflows/: audit.yml  ci.yml  deny.yml  release.yml  scorecard.yml
pheno-otel/src/: histogram.rs  lib.rs  metrics.rs
pheno-otel/tests/: loom_context_propagation.rs  loom_exporter_buffer.rs  loom_metric_recorder.rs  loom_sender_lifecycle.rs
pheno-port-adapter/: Cargo.toml  README.md  SSOT.md
pheno-port-adapter/.config/: nextest.toml
pheno-port-adapter/.github/workflows/: ci.yml  release.yml
pheno-port-adapter/src/: lib.rs
pheno-port-adapter/src/adapters/: mock_clock.rs  mod.rs  system_clock.rs  tcp.rs
pheno-port-adapter/src/ports/: mod.rs  time.rs
pheno-port-adapter/tests/: hex_time.rs  loom.rs  loom_circuit_breaker.rs  loom_port_lifecycle.rs  loom_request_router.rs  loom_sender_lifecycle.rs  proptest.rs
pheno-tracing/: Cargo.toml  README.md
pheno-tracing/src/: lib.rs
pheno-tracing/tests/: init_test.rs
tauri-desktop/src-tauri/: Cargo.toml
tauri-desktop/src-tauri/src/: main.rs  signals.rs
(+4286 files in other folders)
