[workspace]
resolver = "2"
members = [
    "crates/gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kooshapari/omniroute"
authors = ["OmniRoute Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"

# Tauri 2 host
tauri = { version = "2.1", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-window-state = "2.0"
tauri-plugin-deep-link = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-stronghold = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-stream = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "6"
sysinfo = { version = "0.32", features = ["system"] }
machine-uid = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
