[workspace]
resolver = "2"
members = [
    "crates/omniroute-agent",
    "crates/omniroute-core",
    "crates/omniroute-provider",
    "crates/omniroute-runtime",
]

# Future members (Phase 3):
# "crates/omniroute-bindings",

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/OmniRoute"

[workspace.dependencies]
# Async runtime (runtime-only)
tokio = { version = "1", features = ["full"] }

# HTTP (runtime-only)
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http = "1"
http-body-util = "0.1"

# HTTP client (provider-only)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async stream processing (transitive from reqwest's stream feature)
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
url = "2"
percent-encoding = "2"
bytes = "1"
once_cell = "1"

# Agent crate deps
axum = "0.8"
sysinfo = "0.33"
procfs = "0.17"
prometheus = { version = "0.13", features = ["process"] }
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
nvml-wrapper = "0.12"

# Observability (runtime-only)
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["tonic"] }
tracing-opentelemetry = "0.29"

# OTLP gRPC transport (runtime-only)
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"

# Internal crates
omniroute-core = { path = "crates/omniroute-core", version = "0.1.0" }
omniroute-provider = { path = "crates/omniroute-provider", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.bench]
opt-level = 3
debug = true

[profile.dev]
opt-level = 0
debug = true

# === LINT BASELINE (Tier 1.3) =====================================================
# Workspace-wide lint policy. Member crates opt in via `lints.workspace = true`.
# `cargo clippy --workspace --all-targets -- -D warnings` is enforced in CI.
# Lints allowed at the workspace level are deprecated idioms that the data plane
# still relies on (match_same_arms in retry logic, module_name_repetitions in
# provider modules).
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allowed pedantic lints:
module_name_repetitions = "allow"   # e.g. ProviderRegistry inside provider module
match_same_arms = "allow"          # retry classification
must_use_candidate = "allow"       # Provider implementations have side effects
missing_errors_doc = "allow"       # rustdoc errors_doc not yet a stable API
missing_panics_doc = "allow"       # ditto
# Hard-deny correctness lints that clippy warns about
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# warn-by-default — currently MSRV 1.75 doesn't support inline_const_with_stable_features
# so we silence the rust::Lint coupling
unnecessary_self_imports = "deny"