[workspace]
resolver = "2"
members = [
  "crates/omniroute-agent",
]
exclude = [
  "crates/omniroute-rs",
  "crates/omniroute-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
sysinfo = "0.34"
prometheus = "0.14"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
nvml-wrapper = { version = "0.10", features = ["serde"] }
procfs = "0.17"
dashmap = "6"
futures = "0.3"
tokio-tungstenite = { version = "0.26" }
tokio-rustls = "0.26"
rustls-pemfile = "2"
reqwest = { version = "0.12", features = ["json"], default-features = false }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
ring = "0.17"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
hyper-util = "0.1"
tower = "0.5"
tower-http = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[workspace.lints.rust]
