[workspace]
resolver = "2"
members = ["."]

[package]
name = "omniroute-rt"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "OmniRoute Rust data plane — minimum viable executor (ADR-033 Phase 0)"
publish = false

[dependencies]
async-trait = "0.1"
bytes = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6"
