[workspace]
resolver = "2"
members = [
    "crates/omni-core",
    "crates/omni-protocol",
    "crates/omni-storage",
    "crates/omni-translator",
    "crates/omni-router",
    "crates/omni-compression",
    "crates/omni-server",
    "crates/omni-mcp",
    "crates/omni-a2a",
    "crates/omni-telemetry",
    "crates/omni-cli",
    "crates/omni-sdk",
    "crates/omni-crypto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.86"
authors = ["Phenotype Team <team@phenotype.sh>"]
repository = "https://github.com/KooshaPari/OmniRoute"
description = "OmniRoute Rust backend - unified AI router with 160+ providers, RTK+Caveman compression, MCP/A2A, OpenAI-compatible APIs."

[workspace.dependencies]
# Async / runtime
tokio        = { version = "1", features = ["full"] }
async-trait  = "0.1"
futures      = "0.3"

# HTTP
axum         = { version = "0.7", features = ["macros"] }
tower        = { version = "0.5", features = ["util", "timeout", "limit", "load-shed"] }
tower-http   = { version = "0.5", features = ["trace", "cors", "request-id", "util"] }
hyper        = { version = "1", features = ["full"] }
hyper-util   = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest      = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"] }

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
simd-json    = "0.13"

# DB
sqlx         = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json", "migrate", "macros"] }

# Errors
thiserror    = "2"
anyhow       = "1"

# Config / env
dotenvy      = "0.15"

# CLI
clap         = { version = "4", features = ["derive", "env", "color"] }

# Logging / tracing
tracing      = "0.1"
async-stream = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "registry"] }

# Time / ids
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1", features = ["v4", "v7", "serde"] }

# Utilities
once_cell    = "1"
parking_lot  = "0.12"
dashmap      = "6"
bytes        = "1"
http         = "1"
url          = "2"
regex        = "1"
indexmap     = { version = "2", features = ["serde"] }
arc-swap     = "1"

# Crypto / auth
jsonwebtoken = "9"
rand         = "0.8"
sha2         = "0.10"
hmac         = "0.12"
base64       = "0.22"
aes-gcm      = "0.10"
argon2       = "0.5"

# OpenAPI / specs
utoipa       = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
schemars     = "0.8"

# MCP
rmcp         = { version = "2", features = ["server", "client", "transport-io", "transport-streamable-http-server", "macros"] }

# Rate limit
governor     = "0.6"

# Cache
moka         = { version = "0.12", features = ["future"] }

# Tokenizer
tiktoken-rs  = "0.5"

# Lint / dev
proptest     = "1"
pretty_assertions = "1"
insta        = "1"
criterion    = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level   = 3
lto         = "fat"
codegen-units = 1
strip       = "symbols"
panic       = "abort"

[profile.bench]
inherits    = "release"
debug       = true
strip       = "none"
