[package]
name = "pheno-config"
version = "0.1.0"
edition = "2021"
description = "Canonical typed-config loader for the pheno-* fleet. Layered provider cascade (Jetbrains run-configs > env > TOML > embedded defaults) plus ADR-078 secret-holding newtypes with ZeroizeOnDrop."
license = "MIT OR Apache-2.0"
publish = false

# SIDE-23: this crate is a standalone package. The empty `[workspace]`
# table declares it as its own workspace root so cargo does not pick up
# the parent monorepo's `Cargo.toml` workspace when building the bench.
[workspace]

[lib]
name = "pheno_config"
path = "src/lib.rs"

[dependencies]
# ADR-078 / L52: secret-holding newtypes in `secrets.rs` use
# `Zeroize` + `ZeroizeOnDrop` derives to wipe the inner bytes on
# `Drop`. Pinned to 1.7 per the v19 T2 task brief; the Cargo.lock
# will resolve to 1.9.0 (already pinned by the lockfile).
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Cascade (cascade.rs) — layered config provider. The four features
# cover the four providers used in `build_cascade`:
#   - `toml`      — `Toml::string(DEFAULT_TOML)` + `Toml::file("config.toml")`
#   - `env`       — `Env::prefixed("PHENO_")`
#   - `yaml`      — JetBrains run-config format dep (pulls serde_yaml)
#   - (jetbrains is part of figment's core since 0.10)
figment = { version = "0.10", features = ["toml", "env", "yaml"] }

# Used in `cascade.rs`'s embedded-default test for `toml::Value`.
toml = "0.7"
# v20-T5 (L23): proptest is in [dependencies] (not just [dev-dependencies])
# so the manual `Arbitrary` impl for `ApiKey` in `src/secrets.rs` compiles.
# The impl lives outside the `#[cfg(test)]` mod (after the v20-T5 fix) so
# integration tests in `tests/proptest_smoke.rs` can use `any::<ApiKey>()`.
# Per the proptest book: a crate that provides `Arbitrary` impls in src/
# must have proptest as a regular dep.
proptest = { version = "1.4", default-features = false, features = ["std"] }

# v22-T3 (L33) SIGHUP-driven hot reload (see src/hot_reload.rs):
#   signal-hook    - cross-platform signal handling (unix: SIGHUP).
#                    The watcher thread in `watch_sighup` uses
#                    `signal_hook::iterator::Signals` to receive
#                    SIGHUP and re-read the config file.
#   tempfile       - tempdir for unit tests in `hot_reload.rs` (the
#                    `read_and_install_*` tests need a scratch file).
signal-hook = "0.3"
tempfile = "3.10"

# v22-T3 (L33) — tokio is added per the v22-T3 task brief so that
# downstream consumers can run an async-aware variant of the reload
# loop (the example in `examples/hot_reload.rs` runs a tokio runtime
# alongside the sync `watch_sighup` thread). The `signal` feature is
# what would back a future `watch_sighup_async`; `rt-multi-thread`
# is what the example uses for its tokio runtime. Pinned to 1.x per
# the fleet MSRV matrix.
tokio = { version = "1", features = ["signal", "rt-multi-thread"] }

[dev-dependencies]
# v20-T5 (L23): proptest is also in [dev-dependencies] for integration
# tests in `tests/`. (The proptest entry in [dependencies] is what makes
# the src/ impls compile; this one is redundant at runtime but matches
# the task brief's "proptest in dev-dependencies" pattern.)
proptest = "1.4"
# SIDE-23 benchmark suite (scaffolding): 1000-cycle cascade load + parse
# benchmark lives in benches/cascade_load.rs.
criterion = "0.8"
# v20-T3 (L36) — chaos-injection substrate; the
# `tests/chaos_disk_full.rs` adoption test injects a
# `DiskFull` fault and asserts the runtime surfaces it
# through `chaos_injection::inject`.
chaos-injection = { path = "../chaos-injection" }

[[bench]]
name = "cascade_load"
harness = false
