[package]
name = "pheno-otel"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "OpenTelemetry OTLP exporter substrate for the pheno-* fleet (ADR-037). Provides OtlpPort + Stdout/HttpExporter adapters; consumers depend on this for OTLP wire-format export of traces, metrics, and logs."
repository = "https://github.com/KooshaPari/pheno-otel"
documentation = "https://docs.rs/pheno-otel"
keywords = ["phenotype", "opentelemetry", "otlp", "otel", "observability", "substrate", "tracing"]
categories = ["development-tools", "api-bindings", "asynchronous"]
readme = "README.md"
publish = true

# Empty [workspace] table declares this crate as a standalone package,
# intentionally NOT a member of the root monorepo workspace (which contains
# 100+ sub-crates). Consumers add it to their own workspace or depend on
# it via a path/git dep.
[workspace]

[lib]
name = "pheno_otel"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# L25 P0 (v14 cycle-3 T5): loom model checker enumerates interleavings on the
# crate's Send+Sync surface (OtlpPort trait + Stdout/HttpExporter adapters).
# Tests are gated behind the `loom-tests` Cargo feature so a plain
# `cargo test` build compiles the (empty) loom test files instantly
# without running loom's ~1000x-slow permutation checks.
#
# Why feature gate instead of `RUSTFLAGS=--cfg loom`:
#   `RUSTFLAGS=--cfg loom` propagates `cfg(loom)` to every crate in the
#   dep graph. The tokio crate uses `#[cfg(not(loom))]` internally to
#   gate out loom-incompatible code paths, so setting `cfg(loom)` globally
#   breaks any dep graph that pulls in tokio (e.g. pheno-port-adapter).
#   Cargo features are scoped to the declaring crate, so this pattern
#   composes cleanly across the fleet.
#
# Run with:  cargo test --features loom-tests --test loom_<name> --release
loom = { version = "0.7", features = ["checkpoint"] }

[features]
# Enables the loom model-checker integration tests under tests/loom_*.rs.
# Off by default so `cargo test` does not incur loom's ~1000x slowdown.
loom-tests = []

