[package]
name = "pheno-otel"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "OpenTelemetry OTLP exporter substrate for the pheno-* fleet (ADR-037). Provides OtlpPort + Stdout/HttpExporter adapters; consumers depend on this for OTLP wire-format export of traces, metrics, and logs."
repository = "https://github.com/KooshaPari/pheno-otel"
documentation = "https://docs.rs/pheno-otel"
keywords = ["phenotype", "opentelemetry", "otlp", "otel", "observability", "substrate", "tracing"]
categories = ["development-tools", "api-bindings", "asynchronous"]
readme = "README.md"
publish = true

# Empty [workspace] table declares this crate as a standalone package,
# intentionally NOT a member of the root monorepo workspace (which contains
# 100+ sub-crates). Consumers add it to their own workspace or depend on
# it via a path/git dep.
[workspace]

[lib]
name = "pheno_otel"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Concurrency model checker (v14 T5: L25 pillar, cycle 3).
# Permutation-tests shared-state data structures used in this crate's
# public API. Stable Rust 1.75+ compatible; no nightly required.
loom = "0.7"
# V20-T4 (L27) consumer-driven contract tests (Pact). The pact_consumer
# crate's `mock_server` module is used to spin up an in-process HTTP
# server that records requests and replays the configured response;
# contracts are written to `target/pacts/` so the Pact Broker (or
# `pact_verifier_cli` for provider-side verification) can verify the
# OTLP/HTTP wire contract.
pact_consumer = "1.4"
# Sync HTTP client used to drive the real HTTP requests in the Pact
# tests against the in-process mock OTLP/HTTP collector. ureq is
# chosen over reqwest for its tiny dependency surface and its sync
# blocking API (no tokio runtime required inside `#[test]`).
ureq = { version = "2.10", default-features = false, features = ["tls"] }
