[package]
name = "pheno-port-adapter"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[workspace]

[dependencies]
thiserror = "2.0"
# Canonical OTLP wire-format export substrate (ADR-037).
# `pheno-port-adapter` uses `pheno-otel` to surface
# connection-lifecycle spans (connect/disconnect/error) to OTLP/HTTP
# collectors when wired into a wider observability stack (per
# ADR-023 Rule 3.1: every substrate ships observability).
pheno-otel = { path = "../pheno-otel" }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# L25 P0 (v14 cycle-3 T5): loom model checker enumerates interleavings on the
# PortAdapter lifecycle (connect / disconnect / health-check race patterns).
# Tests are gated behind the `loom-tests` Cargo feature so a plain
# `cargo test` build compiles the (empty) loom test files instantly
# without running loom's ~1000x-slow permutation checks.
#
# Why feature gate instead of `RUSTFLAGS=--cfg loom`:
#   `RUSTFLAGS=--cfg loom` propagates `cfg(loom)` to every crate in the
#   dep graph. The tokio crate uses `#[cfg(not(loom))]` internally to
#   gate out loom-incompatible code paths, so setting `cfg(loom)` globally
#   breaks the build (tokio 1.52.3 fails: `AtomicWaker` is gated out).
#   Cargo features are scoped to the declaring crate, so this pattern
#   composes cleanly across the fleet.
#
# Run with:  cargo test --features loom-tests --test loom_<name> --release
loom = { version = "0.7", features = ["checkpoint"] }

[features]
# Enables the loom model-checker integration tests under tests/loom_*.rs.
# Off by default so `cargo test` does not incur loom's ~1000x slowdown.
loom-tests = []

