[package]
name = "pheno-tracing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version.workspace = true
description = "Canonical tracing initialization for the Phenotype monorepo (tracing-subscriber + EnvFilter + tracing-appender)."
readme = "README.md"
keywords = ["phenotype", "tracing", "logging", "observability", "env-filter"]
categories = ["development-tools", "asynchronous"]
publish = true

[lib]
name = "pheno_tracing"
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
