[package]
name = "omniroute-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "argismonitor gateway: spawns + supervises omniroute-server and bridges Tauri IPC <-> kbridge Unix socket"

[lib]
name = "omniroute_gateway"
crate-type = ["lib", "cdylib"]

[dependencies]
tauri.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
which.workspace = true
sysinfo.workspace = true
machine-uid.workspace = true
chrono.workspace = true
uuid.workspace = true
rmp-serde = "1.3"

[dev-dependencies]
tempfile = "3.10"
