[package]
name = "omni-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OmniRoute HTTP server: OpenAI-compat, SSE, axum"

[[bin]]
name = "omni-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
indexmap   = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
async-trait= { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
tokio      = { workspace = true }
uuid       = { workspace = true, features = ["v4", "v7", "serde"] }
chrono     = { workspace = true }
axum       = { workspace = true }
tower      = { workspace = true }
tower-http = { workspace = true }
hyper      = { workspace = true }
hyper-util = { workspace = true }
http       = { workspace = true }
http-body-util = { workspace = true }
bytes      = { workspace = true }
async-stream = { workspace = true }
reqwest    = { workspace = true }
utoipa     = { workspace = true }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
futures    = { workspace = true }
dotenvy    = { workspace = true }
parking_lot = { workspace = true }
sha2         = { workspace = true }
tiktoken-rs  = { workspace = true }
omni-core       = { path = "../omni-core" }
omni-protocol   = { path = "../omni-protocol" }
omni-storage    = { path = "../omni-storage" }
omni-translator = { path = "../omni-translator" }
omni-router     = { path = "../omni-router" }
omni-compression= { path = "../omni-compression" }
omni-mcp        = { path = "../omni-mcp" }
omni-a2a        = { path = "../omni-a2a" }
omni-telemetry  = { path = "../omni-telemetry" }

[dev-dependencies]
pretty_assertions = { workspace = true }
