[workspace]
members = [
    "crates/combo-scorer",
    "crates/combo-scorer-napi",
    "crates/signature-cache",
    "crates/sse-chunking",
    "crates/bifrost-bridge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
dashmap = "6"
crossbeam = "0.8"
bytes = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
