[package]
name = "omniroute-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OmniRoute data-plane binary — hyper server + executor loop"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[[bin]]
name = "omniroute-routed"
path = "src/bin/routed.rs"

[dependencies]
omniroute-core = { workspace = true }
omniroute-provider = { workspace = true }

# Async runtime + HTTP server (the only crate that pulls these in)
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Serialization + errors
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Observability (optional — default-on via `otel` feature)
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["tonic"], optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }

# OTLP gRPC transport (otel-only)
tonic = { version = "0.12", features = ["tls"], optional = true }
prost = { version = "0.13", optional = true }

# Misc
chrono = { workspace = true }
uuid = { workspace = true }
percent-encoding = { workspace = true }
once_cell = { workspace = true }

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tonic",
    "dep:prost",
]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }