[package]
name = "sharecli-tray-linux"
version = "0.1.0"
edition = "2021"
description = "Linux systemtray integration for sharecli (ksni/freedesktop)"

[dependencies]
sharecli = { path = "../../" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2"
zbus = { version = "4", features = ["tokio"] }

[[bin]]
name = "sharecli-tray"
path = "src/main.rs"
