[package]
name = "omniroute-desktop"
version = "0.1.0"
description = "Tauri v2 desktop shell for OmniRoute"
authors = ["OmniRoute"]
edition = "2021"

[[bin]]
name = "omniroute-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
