[package]
name = "argismonitor-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "argismonitor native shell"

[lib]
name = "argismonitor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-updater.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-os.workspace = true
tauri-plugin-window-state.workspace = true
tauri-plugin-deep-link.workspace = true
tauri-plugin-single-instance.workspace = true
tauri-plugin-stronghold.workspace = true
tauri-plugin-log.workspace = true
tauri-plugin-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
omniroute-gateway = { path = "../../../crates/gateway" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
