[package]
name = "omni-compression"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OmniRoute prompt compression: RTK, Caveman, Aggressive, Adaptive"

[lib]
path = "src/lib.rs"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
indexmap   = { workspace = true }
thiserror  = { workspace = true }
async-trait= { workspace = true }
tracing    = { workspace = true }
regex      = { workspace = true }
once_cell   = { workspace = true }
tiktoken-rs = { workspace = true }
unicode-segmentation = "1"
omni-core     = { path = "../omni-core" }
omni-protocol = { path = "../omni-protocol" }

[dev-dependencies]
tokio         = { workspace = true, features = ["macros", "rt"] }
pretty_assertions = { workspace = true }
proptest    = { workspace = true }
criterion   = { workspace = true }
