[package]
name = "omni-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OmniRoute core: errors, config, executor trait"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
anyhow    = { workspace = true }
serde     = { workspace = true }
serde_json= { workspace = true }
tokio     = { workspace = true }
async-trait = { workspace = true }
futures    = { workspace = true }
tracing   = { workspace = true }
chrono    = { workspace = true }
uuid      = { workspace = true }
url       = { workspace = true }
dotenvy   = { workspace = true }
indexmap  = { workspace = true }
sqlx      = { workspace = true }
reqwest   = { workspace = true }
bytes     = { workspace = true }
rand      = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
