[package]
name = "omni-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OmniRoute wire types: OpenAI / Claude / Gemini / Codex / A2A"

[lib]
path = "src/lib.rs"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
indexmap   = { workspace = true }
chrono     = { workspace = true, features = ["serde"] }
uuid       = { workspace = true, features = ["v4", "serde"] }
thiserror  = { workspace = true }
omni-core  = { path = "../omni-core" }

[dev-dependencies]
pretty_assertions = { workspace = true }
insta       = { workspace = true }
proptest    = { workspace = true }
